[package]
name = "ro"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtoa = "0.4.4"
itoa = "0.4.4"
serde = "1.0.104"
url = "2.1.1"

[dev-dependencies]
serde_derive = "1.0"