[package]
name = "ro"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtoa = "0.4.4"
itoa = "0.4.4"
quote = "1.0"
serde = "1.0.104"
serde_urlencoded = "0.6.1"
serde_derive = "1.0"
syn = { version = "1.0.13", features = ["full", "visit"] }
url = "2.1.1"

[lib]
proc-macro = true
